# LINUX_Device

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rebuild.sh
main/: CMakeLists.txt  logging.c  main.c
main/include/: ProjectConfig.h
main/lib/: CMakeLists.txt
main/scde_optional/commands/: CMakeLists.txt
main/scde_optional/commands/Reloadcommand_Command/: CMakeLists.txt  README.md  Reloadcommand_Command.c
main/scde_optional/commands/Reloadcommand_Command/include/: Reloadcommand_Command.h
main/scde_optional/commands/Reloadmodule_Command/: CMakeLists.txt  README.md  Reloadmodule_Command.c
main/scde_optional/commands/Reloadmodule_Command/include/: Reloadmodule_Command.h
main/scde_optional/modules/: CMakeLists.txt
spiffs/: maker.cfg
